<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    android:layout_marginBottom="12dp"
    android:layout_marginHorizontal="12dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/text_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Lorem ipsum dolor sit amet, legere detraxit an qui. Cum eligendi adipisci aliquando no, possim veritus partiendo vel ea. Nobis volutpat has eu, esse atqui animal duo ne, an modo affert vituperatoribus duo. Cu pro aperiam ancillae rationibus, sed verear vituperata dissentias in. Hinc mnesarchum pri te, cibo dolorem cum ex." />

        <TextView
            android:id="@+id/text_quote_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_by"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/text_quote_character"
            app:layout_constraintTop_toBottomOf="@+id/text_quote" />

        <TextView
            android:id="@+id/text_quote_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/text_character_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_quote_from"
            app:layout_constraintTop_toBottomOf="@+id/text_quote" />

        <TextView
            android:id="@+id/text_quote_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_from"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/text_quote_anime"
            app:layout_constraintTop_toBottomOf="@+id/text_quote" />

        <TextView
            android:id="@+id/text_quote_anime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="4dp"
            android:text="@string/text_anime_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_quote" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>